# name: test_autogenerated__process[embeddings][docstring]
  '''
  Make a embeddings request to the ScienceIO API, and returns the result when completed.
  
  Args:
      text (str): The input text to process using the embeddings model.
  
  Returns:
      dict: The output of the embeddings API call with the given input text.
  '''
# ---
# name: test_autogenerated__process[embeddings][payload]
  dict({
    'embeddings': list([
      2.3580236434936523,
      1.360304832458496,
      -3.0109572410583496,
      -0.11918430030345917,
      -0.16139842569828033,
      -1.6771328449249268,
      -1.4774035215377808,
      -1.174541711807251,
      -0.40644535422325134,
      2.020097255706787,
      4.066614151000977,
      2.936342477798462,
      -2.491389751434326,
      3.8549771308898926,
      -0.827804446220398,
      1.4974557161331177,
      1.235574722290039,
      -0.36447441577911377,
      -1.268423080444336,
      -0.3958590626716614,
      0.4125538468360901,
      -1.0653921365737915,
      0.4876132607460022,
      0.380797415971756,
      -1.6617600917816162,
      1.6409050226211548,
      -1.1503634452819824,
      3.0723838806152344,
      -4.1518425941467285,
      -0.7913110256195068,
      -1.0085806846618652,
      1.0893950462341309,
      -3.6692898273468018,
      -2.0752789974212646,
      1.9633922576904297,
      0.659561276435852,
      1.843180775642395,
      0.09410963207483292,
      1.5613689422607422,
      3.133141040802002,
      0.5081191062927246,
      2.5704705715179443,
      -2.6380271911621094,
      1.1942499876022339,
      -1.57291841506958,
      -0.8051962852478027,
      1.9389524459838867,
      -1.8303611278533936,
      2.2777607440948486,
      3.0102756023406982,
      -6.060715198516846,
      -1.268965244293213,
      -0.16428112983703613,
      -0.5511513352394104,
      -0.7171370983123779,
      -3.74941349029541,
      2.0212857723236084,
      -2.9350099563598633,
      -3.617110252380371,
      -4.770745277404785,
      0.527951717376709,
      1.2298948764801025,
      2.718569278717041,
      -2.4707727432250977,
      1.821494221687317,
      0.40342870354652405,
      3.703929901123047,
      -1.9625816345214844,
      0.5730482935905457,
      -1.3841501474380493,
      0.872538685798645,
      0.524408221244812,
      2.749401569366455,
      -3.7368998527526855,
      4.598616600036621,
      1.57063627243042,
      -0.3815421462059021,
      -3.0328028202056885,
      0.33923137187957764,
      1.8375763893127441,
      -3.818629264831543,
      -1.5812404155731201,
      0.7951698899269104,
      -0.458535373210907,
      2.2114648818969727,
      4.833178520202637,
      2.7799339294433594,
      1.5628612041473389,
      1.7547928094863892,
      -0.03316044807434082,
      -3.1094460487365723,
      1.492788553237915,
      -0.3401709198951721,
      -1.018228530883789,
      0.10096697509288788,
      0.6224822402000427,
      1.338888168334961,
      -0.6284539699554443,
      -0.08603555709123611,
      2.303394317626953,
      -1.0232845544815063,
      2.0613579750061035,
      -2.99554705619812,
      0.7409740686416626,
      2.583317756652832,
      -1.5530712604522705,
      1.961235761642456,
      -2.0985937118530273,
      -2.6953043937683105,
      -3.505603790283203,
      4.862534523010254,
      4.174205303192139,
      3.2599687576293945,
      4.142618179321289,
      3.7683444023132324,
      2.0216596126556396,
      0.29449182748794556,
      -0.05242038518190384,
      -1.293723464012146,
      -2.10559344291687,
      3.2620556354522705,
      3.297130584716797,
      -1.406139612197876,
      1.6955194473266602,
      -1.027005672454834,
      -2.383606195449829,
      1.6762335300445557,
      -2.1022119522094727,
      1.807807445526123,
      -4.382913589477539,
      0.9074889421463013,
      -0.11275249719619751,
      -0.037591516971588135,
      -0.7580161690711975,
      -1.6464171409606934,
      2.077446460723877,
      -0.22317945957183838,
      -0.6715319156646729,
      4.905249118804932,
      -0.5628855228424072,
      -0.11369380354881287,
      -2.96466326713562,
      -8.461908340454102,
      -0.3620058000087738,
      1.1271846294403076,
      -1.8689749240875244,
      2.521747589111328,
      0.8105045557022095,
      -0.5848832130432129,
      -0.12925201654434204,
      1.553356647491455,
      1.6446393728256226,
      0.5998550653457642,
      1.0764261484146118,
      -2.4845800399780273,
      -1.0011482238769531,
      -3.539015531539917,
      3.8572616577148438,
      2.946556568145752,
      -1.3457911014556885,
      -1.224151372909546,
      -3.13881254196167,
      0.9453340172767639,
      4.148934364318848,
      -0.4516671895980835,
      -1.7775723934173584,
      1.1772996187210083,
      -0.825496256351471,
      1.1974451541900635,
      -3.315483570098877,
      0.6417139768600464,
      -2.142017364501953,
      -1.4864208698272705,
      -2.5988354682922363,
      -1.8384935855865479,
      -3.4527676105499268,
      -1.1351959705352783,
      -1.813645362854004,
      1.4993908405303955,
      -0.9951971173286438,
      1.9787133932113647,
      1.708040714263916,
      2.443788766860962,
      2.0178191661834717,
      4.463957786560059,
      1.6256940364837646,
      2.784949541091919,
      -3.560884475708008,
      2.5944924354553223,
      -0.6427537798881531,
      -0.12142956256866455,
      -3.3986077308654785,
      3.879481792449951,
      -0.9692915081977844,
      2.4925732612609863,
      3.9111173152923584,
      -1.8080123662948608,
      -0.33463141322135925,
      -0.6560167074203491,
      -2.639871120452881,
      -2.0675528049468994,
      1.8870739936828613,
      -1.0610191822052002,
      -2.297555446624756,
      -0.43392717838287354,
      2.309159994125366,
      -1.872341275215149,
      -5.299466133117676,
      -0.5684254169464111,
      -0.17266422510147095,
      1.9044932126998901,
      -3.952171802520752,
      -0.14418849349021912,
      -2.1711525917053223,
      2.1522064208984375,
      1.5169034004211426,
      1.627713680267334,
      -1.1711242198944092,
      0.8972607851028442,
      -1.801269292831421,
      -4.062189102172852,
      2.86807918548584,
      -1.6448156833648682,
      -1.3553335666656494,
      0.2958115339279175,
      2.3748395442962646,
      -0.8512691855430603,
      0.6118691563606262,
      -0.32750236988067627,
      -2.674926280975342,
      -1.6079754829406738,
      -3.7248501777648926,
      -3.531320810317993,
      -0.4727935791015625,
      -2.0107662677764893,
      -3.8347854614257812,
      1.1891193389892578,
      2.0983214378356934,
      0.9372490644454956,
      0.3781968355178833,
      0.7134398818016052,
      -2.486586809158325,
      -0.6116156578063965,
      1.090424656867981,
      3.2177066802978516,
      -1.1977124214172363,
      -4.183273792266846,
      -2.716620922088623,
      -1.4127134084701538,
      0.19669203460216522,
      2.195103645324707,
      2.076695442199707,
      2.6701207160949707,
      1.7871603965759277,
      -0.37310248613357544,
      -0.5160850286483765,
      2.0032899379730225,
      0.8354480862617493,
      -4.153391361236572,
      -1.8243210315704346,
      -0.5845154523849487,
      3.004831552505493,
      -0.6244458556175232,
      -1.4046766757965088,
      -1.042612910270691,
      0.20526093244552612,
      2.9714760780334473,
      -1.516886830329895,
      -1.2454156875610352,
      0.7210789918899536,
      -0.5669879913330078,
      -2.270216464996338,
      1.1637221574783325,
      -1.4725300073623657,
      0.1942521631717682,
      -2.2685179710388184,
      0.6323000192642212,
      -0.36590376496315,
      -3.455305814743042,
      -3.282660484313965,
      -0.3524971008300781,
      0.8700831532478333,
      0.325078547000885,
      -1.8413549661636353,
      -0.6803548336029053,
      -3.595804214477539,
      4.102609634399414,
      0.5126602649688721,
      -1.9966912269592285,
      0.8830074071884155,
      2.93080997467041,
      3.825888156890869,
      -3.448920249938965,
      -3.855410575866699,
      3.1459193229675293,
      0.37344539165496826,
      -1.1721707582473755,
      -0.9484155774116516,
      2.343438148498535,
      1.9704697132110596,
      2.989165782928467,
      3.647134780883789,
      0.3438640832901001,
      1.2770150899887085,
      0.718330979347229,
      -1.3736151456832886,
      1.790712594985962,
      3.6841347217559814,
      -0.10226587951183319,
      2.2388463020324707,
      -1.8345032930374146,
      1.0488331317901611,
      3.370969295501709,
      0.9345355033874512,
      -1.7418291568756104,
      -3.118978500366211,
      -0.24507588148117065,
      -1.1566801071166992,
      1.2968101501464844,
      3.7370426654815674,
      -1.7913695573806763,
      -2.6128714084625244,
      3.687163829803467,
      1.3072545528411865,
      0.33156222105026245,
      0.5089517831802368,
      -2.170104742050171,
      2.0179507732391357,
      2.012784957885742,
      -3.145475149154663,
      2.315345287322998,
      -1.431187629699707,
      -0.3003692328929901,
      4.483489990234375,
      5.509093761444092,
      -1.6524261236190796,
      3.50439190864563,
      1.012885570526123,
      -0.26061439514160156,
      1.1265807151794434,
      0.1837925910949707,
      -1.0403984785079956,
      4.389566421508789,
      -3.7545948028564453,
      -1.0523332357406616,
      0.4303891658782959,
      1.2424267530441284,
      2.363285541534424,
      0.317110151052475,
      0.9210626482963562,
      -0.5642592906951904,
      -2.463355302810669,
      -1.379316806793213,
      -1.5643887519836426,
      4.028460502624512,
      1.9488394260406494,
      5.583308696746826,
      0.16554498672485352,
      2.5719223022460938,
      2.6652560234069824,
      -4.596857070922852,
      2.7000374794006348,
      -1.6819947957992554,
      2.895763874053955,
      1.7338905334472656,
      2.403876304626465,
      0.8656936883926392,
      -0.5383517742156982,
      0.6414210200309753,
      0.3465674817562103,
      0.5715227723121643,
      -0.051513880491256714,
      0.5151005983352661,
      0.8326714634895325,
      2.7029151916503906,
      2.295689821243286,
      0.34804636240005493,
      -0.0662044882774353,
      -3.4271671772003174,
      -1.0247924327850342,
      1.1311473846435547,
      -0.9366584420204163,
      1.2926661968231201,
      -0.06825192272663116,
      -0.7607815861701965,
      -3.3076586723327637,
      -1.9587786197662354,
      -4.440684795379639,
      -0.9622816443443298,
      1.574890375137329,
      0.1351958066225052,
      -1.328601598739624,
      0.07027751207351685,
      0.25474151968955994,
      1.5026607513427734,
      -0.8382842540740967,
      0.40743255615234375,
      0.2565476894378662,
      2.0861496925354004,
      -0.48353296518325806,
      -4.603050231933594,
      -0.7534376978874207,
      1.0818736553192139,
      2.0765185356140137,
      -2.7201366424560547,
      1.0912787914276123,
      1.8293412923812866,
      0.6599133014678955,
      -1.6142470836639404,
      -2.0819642543792725,
      0.39623725414276123,
      -3.135334014892578,
      -0.1359788328409195,
      0.8336013555526733,
      -5.71711540222168,
      -0.30682364106178284,
      -2.9107372760772705,
      3.9219062328338623,
      -2.8226208686828613,
      -0.48081791400909424,
      -2.916982650756836,
      1.8558378219604492,
      -1.830925464630127,
      4.078372955322266,
      0.6547835469245911,
      -0.6113607287406921,
      3.151492118835449,
      -6.525669097900391,
      5.3933563232421875,
      -3.96484375,
      -1.4950106143951416,
      -3.6958703994750977,
      -1.338736653327942,
      1.8994770050048828,
      -1.623032569885254,
      5.316862106323242,
      1.929802417755127,
      -1.6234521865844727,
      3.4030838012695312,
      1.9580559730529785,
      -0.9837092161178589,
      0.9046684503555298,
      -2.5665013790130615,
      2.175833225250244,
      3.094273805618286,
      2.94637393951416,
      2.202857494354248,
      1.9518626928329468,
      -3.5257654190063477,
      1.141360878944397,
      2.9411728382110596,
      3.260737657546997,
      0.8607381582260132,
      1.815351963043213,
      -0.07108534872531891,
      2.0557572841644287,
      4.595670700073242,
      -1.6193835735321045,
      -3.862184524536133,
      1.7671749591827393,
      0.5033769607543945,
      1.2568975687026978,
      0.7870861291885376,
      -0.4178560972213745,
      1.0204756259918213,
      -0.2737947106361389,
      0.3136778175830841,
      -1.3359613418579102,
      3.5017709732055664,
      1.2079801559448242,
      -1.5169727802276611,
      -3.369739055633545,
      -2.246718645095825,
      -0.15557348728179932,
      6.918743133544922,
      -0.0008385637775063515,
      0.15497782826423645,
      0.775022029876709,
      1.8853403329849243,
      -0.5526162981987,
      2.6067748069763184,
      -2.683607578277588,
      -0.5156756043434143,
      6.595883369445801,
      0.5735406279563904,
      -1.6228368282318115,
      1.0141432285308838,
      0.37439829111099243,
      1.3937424421310425,
      -2.7879068851470947,
      -1.5111720561981201,
      -0.5736755132675171,
      -0.4727897047996521,
      -2.7592291831970215,
      1.985388994216919,
      -1.628092646598816,
      0.747977614402771,
      4.118717193603516,
      -3.2233481407165527,
      -2.6029224395751953,
      2.5210721492767334,
      -0.05475057661533356,
      3.3429832458496094,
      -0.1625606268644333,
      -4.4385480880737305,
      -0.7213448286056519,
      1.355907678604126,
      0.4825742840766907,
      -3.502735137939453,
      0.6917688250541687,
      0.26420098543167114,
      0.7437039613723755,
      -1.8197993040084839,
      1.0602103471755981,
      4.69907283782959,
      1.1116650104522705,
      -0.13402312994003296,
      0.5561375617980957,
      1.4539103507995605,
      -3.8700132369995117,
      1.1095114946365356,
      -0.17436754703521729,
      2.270756483078003,
      -2.3304100036621094,
      3.404407024383545,
      4.152745723724365,
      2.1446855068206787,
      -2.6071810722351074,
      -2.4556710720062256,
      2.4513773918151855,
      3.009181499481201,
      -1.1264193058013916,
      1.365983247756958,
      1.2357192039489746,
      -2.3402481079101562,
      0.021456509828567505,
      -2.224949836730957,
      -5.506998062133789,
      3.1466853618621826,
      3.0577454566955566,
      2.245023727416992,
      -0.2548050284385681,
      -0.027231484651565552,
      0.3538224399089813,
      -1.2210502624511719,
      0.676703691482544,
      2.379587173461914,
      2.942798137664795,
      -0.8056774735450745,
      4.6777024269104,
      1.1038634777069092,
      1.9161624908447266,
      -0.7409613132476807,
      1.0570647716522217,
      -0.5582290291786194,
      0.33919280767440796,
      -4.04475212097168,
      -7.93919563293457,
      -3.3726468086242676,
      -1.1881473064422607,
      1.517921805381775,
      1.223937749862671,
      2.1145243644714355,
      2.193756103515625,
      0.8140489459037781,
      1.6214418411254883,
      -2.300466537475586,
      4.049571514129639,
      -2.4867799282073975,
      2.406918525695801,
      3.39884877204895,
      -1.928836703300476,
      -2.016491413116455,
      -1.6403377056121826,
      -0.4692270755767822,
      4.206913471221924,
      -0.25458475947380066,
      4.039356231689453,
      -0.8701845407485962,
      1.7770652770996094,
      3.132741928100586,
      -2.0444302558898926,
      0.1902088224887848,
      2.5810904502868652,
      0.5343791246414185,
      -0.597815752029419,
      -0.33950942754745483,
      1.8073652982711792,
      5.200031757354736,
      0.38636577129364014,
      0.5009194612503052,
      2.481722116470337,
      2.644754409790039,
      1.0488109588623047,
      -2.1183862686157227,
      -2.7316572666168213,
      0.4164479374885559,
      -0.14763443171977997,
      0.011010400950908661,
      0.3016752004623413,
      0.2095988392829895,
      -0.31483733654022217,
      1.0352517366409302,
      1.2664475440979004,
      2.877455234527588,
      1.2072563171386719,
      -1.7732810974121094,
      -0.04669845104217529,
      -0.07195480167865753,
      -0.9959641098976135,
      1.6019500494003296,
      -2.203627586364746,
      1.4170732498168945,
      0.7455061078071594,
      -0.013104135170578957,
      0.6215356588363647,
      -1.5728716850280762,
      0.8712608218193054,
      -4.481454849243164,
      0.45225417613983154,
      0.9914025068283081,
      4.220520496368408,
      -4.332125663757324,
      1.6681561470031738,
      4.066044807434082,
      -1.2816956043243408,
      0.40401625633239746,
      3.4646224975585938,
      -0.7428807616233826,
      1.007899284362793,
      -3.4488749504089355,
      -7.437690258026123,
      0.9480054378509521,
      0.980561375617981,
      -5.117312431335449,
      -3.8516685962677,
      5.773345947265625,
      -0.3750399351119995,
      -0.23431158065795898,
      -2.1197872161865234,
      3.7191600799560547,
      -1.295850157737732,
      -0.9000211954116821,
      1.7298568487167358,
      -0.6342898607254028,
      -0.6895177364349365,
      -1.2470897436141968,
      0.3344374895095825,
      1.6553902626037598,
      -2.049607753753662,
      0.34674498438835144,
      0.45740601420402527,
      0.12983021140098572,
      -0.606439471244812,
      2.129617691040039,
      -2.00124192237854,
      -2.472799062728882,
      -4.0811238288879395,
      0.22879332304000854,
      0.4983218312263489,
      -2.1039915084838867,
      0.13855236768722534,
      -4.019905090332031,
      -0.049428969621658325,
      -0.6128489971160889,
      0.6410537362098694,
      0.172038272023201,
      1.4634065628051758,
      -1.7546806335449219,
      2.469888210296631,
      0.15073224902153015,
      0.4091005325317383,
      -6.95684289932251,
      -1.4930814504623413,
      -2.552633285522461,
      -1.912168025970459,
      2.044182777404785,
      -1.737627625465393,
      0.8122683763504028,
      -1.5198677778244019,
      -4.1205034255981445,
      3.0826668739318848,
      -2.494229316711426,
      -1.1563458442687988,
      4.724070072174072,
      -1.1683217287063599,
      3.80067777633667,
      -1.4201338291168213,
      0.554955244064331,
      4.082496643066406,
      -1.994687795639038,
      3.5093936920166016,
      -1.818359613418579,
      -3.8180418014526367,
      1.0104291439056396,
      -0.6126047372817993,
      -5.186394691467285,
      -3.8529865741729736,
      1.24098801612854,
      2.735503673553467,
      1.7296204566955566,
      0.016512706875801086,
      -1.3781846761703491,
      -1.3531609773635864,
      -3.176666259765625,
      -0.4323117733001709,
      0.1657525897026062,
      -1.4815831184387207,
      1.5085279941558838,
      -2.9175148010253906,
      -3.2505507469177246,
      1.7304521799087524,
      2.178906202316284,
      -2.1351988315582275,
      -0.6457841396331787,
      -0.9506844282150269,
      -0.3473559617996216,
      -1.1977951526641846,
      -1.2086968421936035,
      -2.9402053356170654,
      6.273015022277832,
      -2.054138660430908,
      0.23060393333435059,
      -1.897106409072876,
      -4.267983913421631,
      -1.6512831449508667,
      2.1799135208129883,
      0.13144560158252716,
      -0.33709779381752014,
      0.7795708775520325,
      -0.6575592756271362,
      -3.5736570358276367,
      1.9314991235733032,
      1.9019269943237305,
      -2.985316753387451,
      -1.5005006790161133,
      0.010197550058364868,
      -2.401062488555908,
      -0.8648676872253418,
      -2.7029359340667725,
      0.05146150290966034,
      -1.7793629169464111,
      -3.8220043182373047,
      1.7566123008728027,
      1.1559149026870728,
      3.547649383544922,
      1.6277928352355957,
      -3.200019359588623,
      -0.2851450741291046,
      -4.017879486083984,
      -0.21467962861061096,
      -0.1193949282169342,
      2.57849383354187,
      -2.0261597633361816,
      -0.7606240510940552,
      -0.15141567587852478,
      -0.8227984309196472,
      0.7204628586769104,
      -2.614686965942383,
      0.5427447557449341,
      -1.4452544450759888,
      -3.5072641372680664,
      3.1856307983398438,
      2.069502592086792,
      3.118847370147705,
      -1.751623511314392,
      -1.14943265914917,
      -3.2492518424987793,
      3.4234161376953125,
      -3.573911190032959,
      -3.9750280380249023,
      1.900260090827942,
      -0.8438698053359985,
      2.471524715423584,
      1.2387816905975342,
      -3.9086763858795166,
      -0.2738339304924011,
      1.8567664623260498,
      1.901822566986084,
      0.7866761684417725,
      -1.0009928941726685,
      0.6644538640975952,
      -0.17206865549087524,
      2.426022529602051,
      1.2166439294815063,
      1.7450506687164307,
      3.6217260360717773,
      -2.1918303966522217,
      3.501750946044922,
      1.693986177444458,
      0.7235802412033081,
      1.7616872787475586,
      3.6329431533813477,
      -3.5730438232421875,
      1.0819116830825806,
      3.4219861030578613,
      1.1487722396850586,
      -0.9618809223175049,
      -5.3853535652160645,
      2.3532605171203613,
      0.5236431360244751,
      -0.4920429289340973,
      0.7536395788192749,
      3.3546905517578125,
      -0.4338274598121643,
      3.0068626403808594,
      -3.3475356101989746,
      4.693214416503906,
      -2.1634817123413086,
      -2.465376377105713,
      0.06813840568065643,
      -0.09589794278144836,
      0.8234801888465881,
      -0.28772982954978943,
      -1.365837812423706,
      -0.9197624325752258,
      -2.3786721229553223,
      3.5490379333496094,
      -1.6116943359375,
      -2.319779396057129,
      -1.4374018907546997,
      1.8938400745391846,
      0.4397590756416321,
      -1.1401662826538086,
      -1.5406527519226074,
      -1.354872703552246,
      -0.9220088720321655,
      -1.6607606410980225,
      3.2262380123138428,
      -1.5111944675445557,
      -0.5191903710365295,
      2.2064764499664307,
      2.7654502391815186,
      0.12060648202896118,
      -2.527010440826416,
      -0.5274739265441895,
      -1.277311086654663,
      2.5123560428619385,
      4.034602165222168,
      -1.9909279346466064,
      -0.24563680589199066,
      -3.705618381500244,
      -2.0205185413360596,
      -5.554520130157471,
      -5.332137107849121,
      -1.1888117790222168,
      0.8202224969863892,
      0.6219097375869751,
      -1.5241944789886475,
      1.7036503553390503,
      -0.8311114311218262,
      -4.160922527313232,
      2.8369269371032715,
      1.5429153442382812,
      -0.038456737995147705,
      0.5943104028701782,
      1.51449453830719,
      -4.042849540710449,
      -0.7020843029022217,
      -0.9611448049545288,
      -3.2752184867858887,
      -1.0332973003387451,
      -3.905855894088745,
      0.5299563407897949,
      1.4335333108901978,
      -2.808579206466675,
      4.454623222351074,
      -2.2383317947387695,
      -4.784788608551025,
      3.2087392807006836,
      2.136904716491699,
      1.271710753440857,
      -0.1337616741657257,
      1.102691888809204,
      1.7546650171279907,
      4.71331262588501,
      -1.572437047958374,
      -2.033377170562744,
      -1.4252827167510986,
      -3.1919407844543457,
      -1.5887340307235718,
      1.7822792530059814,
      -1.9253793954849243,
      2.7741031646728516,
      -3.2167763710021973,
      0.3269890546798706,
      1.5211496353149414,
      -1.347043514251709,
      0.21050356328487396,
      2.4310288429260254,
      -2.0682599544525146,
      -4.382493019104004,
      1.9002063274383545,
      5.143777847290039,
      2.3011832237243652,
      1.8485462665557861,
      2.8118510246276855,
      -1.8743784427642822,
      3.9697022438049316,
      -1.136845350265503,
      -4.150590896606445,
      -0.5999035239219666,
      0.5155675411224365,
      0.8222032785415649,
      0.25968503952026367,
      -1.8435108661651611,
      0.7849248647689819,
      -3.188387393951416,
      2.1053268909454346,
      -1.1260337829589844,
      4.522841453552246,
      -2.343440532684326,
      0.8670401573181152,
      -2.0041866302490234,
      -1.638573408126831,
      -1.7032694816589355,
      -3.0969743728637695,
      1.0408127307891846,
      -2.9837775230407715,
      5.617643356323242,
      -0.18794584274291992,
      1.3511501550674438,
      -2.2800917625427246,
      3.228630304336548,
      0.9778323769569397,
      -0.90382981300354,
      0.36803364753723145,
      -2.369814872741699,
      0.9298133850097656,
      2.026308298110962,
      2.420731544494629,
      0.24597492814064026,
      1.6705529689788818,
      -3.785092830657959,
      -3.1824750900268555,
      0.6980984210968018,
      -2.106013298034668,
      2.0260415077209473,
      3.250924587249756,
      -2.094576597213745,
      1.1227658987045288,
      -5.221075057983398,
      -3.7092628479003906,
      -2.9940195083618164,
      3.7613277435302734,
      6.018345832824707,
      5.191885948181152,
      3.7874085903167725,
      0.0118059441447258,
      -0.9975622892379761,
      0.7683624029159546,
      -3.64323091506958,
      0.3963169455528259,
      -1.1499418020248413,
      1.5267220735549927,
      1.1838116645812988,
      0.5991339683532715,
      -1.7501177787780762,
      1.4511451721191406,
      -2.040935754776001,
      -0.7882697582244873,
      2.6435208320617676,
      1.2024517059326172,
      3.3477745056152344,
      -2.1703007221221924,
      -1.4285922050476074,
      -3.256948471069336,
      -1.9398467540740967,
      0.4640342593193054,
      -0.9997119903564453,
      2.352919816970825,
      -2.1070973873138428,
      -1.984083652496338,
      -0.3430825173854828,
      -0.9021745324134827,
      5.263639450073242,
      0.8221256732940674,
      0.8923991918563843,
      -0.8229922652244568,
      -3.9184446334838867,
      -3.6009767055511475,
      2.927737236022949,
      0.871411919593811,
      -0.2550358474254608,
      2.6199493408203125,
      -3.8300015926361084,
      1.648944616317749,
      -3.7143402099609375,
      1.3659207820892334,
      2.1033568382263184,
      0.22941838204860687,
      1.7477960586547852,
      0.7422817349433899,
      -2.922940254211426,
      -4.389864921569824,
      -0.978498637676239,
      0.7044598460197449,
      1.4681869745254517,
      3.4652292728424072,
      -3.471350908279419,
      0.6848130226135254,
      3.2630362510681152,
      -2.0560362339019775,
      -2.367154359817505,
      -2.0156044960021973,
      1.08977472782135,
      3.425381660461426,
      3.818444013595581,
      3.8649940490722656,
      -0.7231144309043884,
      -2.195209503173828,
      0.1354115605354309,
      2.0436134338378906,
      0.28797125816345215,
      1.313744068145752,
      -1.5408962965011597,
      0.4328632950782776,
      -2.366100788116455,
      1.6113888025283813,
      1.719717264175415,
      -1.7778809070587158,
      -1.0864577293395996,
      3.5654640197753906,
      2.1870057582855225,
    ]),
    'input_text': 'Romeo Santos made an appointment with Dr. Geoffrey Royce on December 21, 2020. Mr. Santos was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__process[identify_phi][docstring]
  '''
  Make a identify-phi request to the ScienceIO API, and returns the result when completed.
  
  Args:
      text (str): The input text to process using the identify-phi model.
  
  Returns:
      dict: The output of the identify-phi API call with the given input text.
  '''
# ---
# name: test_autogenerated__process[identify_phi][payload]
  dict({
    'annotations': list([
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.998,
          }),
        }),
        'span': dict({
          'end': 12,
          'start': 0,
        }),
        'text': 'Romeo Santos',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[DOCTOR]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 56,
          'start': 42,
        }),
        'text': 'Geoffrey Royce',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[DATE]',
          }),
          'phi_type': dict({
            'label': '[DATE]',
            'score': 1.0,
          }),
        }),
        'span': dict({
          'end': 77,
          'start': 60,
        }),
        'text': 'December 21, 2020',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 89,
          'start': 83,
        }),
        'text': 'Santos',
      }),
    ]),
    'input_text': 'Romeo Santos made an appointment with Dr. Geoffrey Royce on December 21, 2020. Mr. Santos was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__process[redact_phi][docstring]
  '''
  Make a redact-phi request to the ScienceIO API, and returns the result when completed.
  
  Args:
      text (str): The input text to process using the redact-phi model.
  
  Returns:
      dict: The output of the redact-phi API call with the given input text.
  '''
# ---
# name: test_autogenerated__process[redact_phi][payload]
  dict({
    'annotations': list([
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.998,
          }),
        }),
        'span': dict({
          'end': 9,
          'start': 0,
        }),
        'text': '[PATIENT]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[DOCTOR]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 47,
          'start': 39,
        }),
        'text': '[DOCTOR]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[DATE]',
          }),
          'phi_type': dict({
            'label': '[DATE]',
            'score': 1.0,
          }),
        }),
        'span': dict({
          'end': 57,
          'start': 51,
        }),
        'text': '[DATE]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 72,
          'start': 63,
        }),
        'text': '[PATIENT]',
      }),
    ]),
    'output_text': '[PATIENT] made an appointment with Dr. [DOCTOR] on [DATE]. Mr. [PATIENT] was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__process[structure][docstring]
  '''
  Make a structure request to the ScienceIO API, and returns the result when completed.
  
  Args:
      text (str): The input text to process using the structure model.
  
  Returns:
      dict: The output of the structure API call with the given input text.
  '''
# ---
# name: test_autogenerated__process[structure][payload]
  dict({
    'spans': list([
      dict({
        'concept_id': 'UMLS:C5203670',
        'concept_name': 'COVID-19',
        'concept_type': 'Medical Conditions',
        'pos_end': 12,
        'pos_start': 4,
        'text': 'COVID-19',
      }),
      dict({
        'concept_id': 'UMLS:C1615608',
        'concept_name': 'Pandemics',
        'concept_type': 'Anatomy & Physiology',
        'pos_end': 21,
        'pos_start': 13,
        'text': 'pandemic',
      }),
      dict({
        'concept_id': 'UMLS:C0008059',
        'concept_name': 'Child',
        'concept_type': 'Context',
        'pos_end': 81,
        'pos_start': 73,
        'text': 'children',
      }),
      dict({
        'concept_id': 'UMLS:C0001779',
        'concept_name': 'Age',
        'concept_type': 'Anatomy & Physiology',
        'pos_end': 90,
        'pos_start': 87,
        'text': 'Age',
      }),
      dict({
        'concept_id': 'UMLS:C0008059',
        'concept_name': 'Child',
        'concept_type': 'Context',
        'pos_end': 151,
        'pos_start': 143,
        'text': 'children',
      }),
      dict({
        'concept_id': 'UMLS:C0009450',
        'concept_name': 'Communicable Diseases',
        'concept_type': 'Medical Conditions',
        'pos_end': 192,
        'pos_start': 183,
        'text': 'infection',
      }),
    ]),
    'text': 'The COVID-19 pandemic has shown a markedly low proportion of cases among children 1-4. Age disparities in observed cases could be explained by children having lower susceptibility to infection, lower propensity to show clinical symptoms or both.',
  })
# ---
# name: test_autogenerated__submit_and_poll[embeddings][payload]
  dict({
    'embeddings': list([
      2.3580236434936523,
      1.360304832458496,
      -3.0109572410583496,
      -0.11918430030345917,
      -0.16139842569828033,
      -1.6771328449249268,
      -1.4774035215377808,
      -1.174541711807251,
      -0.40644535422325134,
      2.020097255706787,
      4.066614151000977,
      2.936342477798462,
      -2.491389751434326,
      3.8549771308898926,
      -0.827804446220398,
      1.4974557161331177,
      1.235574722290039,
      -0.36447441577911377,
      -1.268423080444336,
      -0.3958590626716614,
      0.4125538468360901,
      -1.0653921365737915,
      0.4876132607460022,
      0.380797415971756,
      -1.6617600917816162,
      1.6409050226211548,
      -1.1503634452819824,
      3.0723838806152344,
      -4.1518425941467285,
      -0.7913110256195068,
      -1.0085806846618652,
      1.0893950462341309,
      -3.6692898273468018,
      -2.0752789974212646,
      1.9633922576904297,
      0.659561276435852,
      1.843180775642395,
      0.09410963207483292,
      1.5613689422607422,
      3.133141040802002,
      0.5081191062927246,
      2.5704705715179443,
      -2.6380271911621094,
      1.1942499876022339,
      -1.57291841506958,
      -0.8051962852478027,
      1.9389524459838867,
      -1.8303611278533936,
      2.2777607440948486,
      3.0102756023406982,
      -6.060715198516846,
      -1.268965244293213,
      -0.16428112983703613,
      -0.5511513352394104,
      -0.7171370983123779,
      -3.74941349029541,
      2.0212857723236084,
      -2.9350099563598633,
      -3.617110252380371,
      -4.770745277404785,
      0.527951717376709,
      1.2298948764801025,
      2.718569278717041,
      -2.4707727432250977,
      1.821494221687317,
      0.40342870354652405,
      3.703929901123047,
      -1.9625816345214844,
      0.5730482935905457,
      -1.3841501474380493,
      0.872538685798645,
      0.524408221244812,
      2.749401569366455,
      -3.7368998527526855,
      4.598616600036621,
      1.57063627243042,
      -0.3815421462059021,
      -3.0328028202056885,
      0.33923137187957764,
      1.8375763893127441,
      -3.818629264831543,
      -1.5812404155731201,
      0.7951698899269104,
      -0.458535373210907,
      2.2114648818969727,
      4.833178520202637,
      2.7799339294433594,
      1.5628612041473389,
      1.7547928094863892,
      -0.03316044807434082,
      -3.1094460487365723,
      1.492788553237915,
      -0.3401709198951721,
      -1.018228530883789,
      0.10096697509288788,
      0.6224822402000427,
      1.338888168334961,
      -0.6284539699554443,
      -0.08603555709123611,
      2.303394317626953,
      -1.0232845544815063,
      2.0613579750061035,
      -2.99554705619812,
      0.7409740686416626,
      2.583317756652832,
      -1.5530712604522705,
      1.961235761642456,
      -2.0985937118530273,
      -2.6953043937683105,
      -3.505603790283203,
      4.862534523010254,
      4.174205303192139,
      3.2599687576293945,
      4.142618179321289,
      3.7683444023132324,
      2.0216596126556396,
      0.29449182748794556,
      -0.05242038518190384,
      -1.293723464012146,
      -2.10559344291687,
      3.2620556354522705,
      3.297130584716797,
      -1.406139612197876,
      1.6955194473266602,
      -1.027005672454834,
      -2.383606195449829,
      1.6762335300445557,
      -2.1022119522094727,
      1.807807445526123,
      -4.382913589477539,
      0.9074889421463013,
      -0.11275249719619751,
      -0.037591516971588135,
      -0.7580161690711975,
      -1.6464171409606934,
      2.077446460723877,
      -0.22317945957183838,
      -0.6715319156646729,
      4.905249118804932,
      -0.5628855228424072,
      -0.11369380354881287,
      -2.96466326713562,
      -8.461908340454102,
      -0.3620058000087738,
      1.1271846294403076,
      -1.8689749240875244,
      2.521747589111328,
      0.8105045557022095,
      -0.5848832130432129,
      -0.12925201654434204,
      1.553356647491455,
      1.6446393728256226,
      0.5998550653457642,
      1.0764261484146118,
      -2.4845800399780273,
      -1.0011482238769531,
      -3.539015531539917,
      3.8572616577148438,
      2.946556568145752,
      -1.3457911014556885,
      -1.224151372909546,
      -3.13881254196167,
      0.9453340172767639,
      4.148934364318848,
      -0.4516671895980835,
      -1.7775723934173584,
      1.1772996187210083,
      -0.825496256351471,
      1.1974451541900635,
      -3.315483570098877,
      0.6417139768600464,
      -2.142017364501953,
      -1.4864208698272705,
      -2.5988354682922363,
      -1.8384935855865479,
      -3.4527676105499268,
      -1.1351959705352783,
      -1.813645362854004,
      1.4993908405303955,
      -0.9951971173286438,
      1.9787133932113647,
      1.708040714263916,
      2.443788766860962,
      2.0178191661834717,
      4.463957786560059,
      1.6256940364837646,
      2.784949541091919,
      -3.560884475708008,
      2.5944924354553223,
      -0.6427537798881531,
      -0.12142956256866455,
      -3.3986077308654785,
      3.879481792449951,
      -0.9692915081977844,
      2.4925732612609863,
      3.9111173152923584,
      -1.8080123662948608,
      -0.33463141322135925,
      -0.6560167074203491,
      -2.639871120452881,
      -2.0675528049468994,
      1.8870739936828613,
      -1.0610191822052002,
      -2.297555446624756,
      -0.43392717838287354,
      2.309159994125366,
      -1.872341275215149,
      -5.299466133117676,
      -0.5684254169464111,
      -0.17266422510147095,
      1.9044932126998901,
      -3.952171802520752,
      -0.14418849349021912,
      -2.1711525917053223,
      2.1522064208984375,
      1.5169034004211426,
      1.627713680267334,
      -1.1711242198944092,
      0.8972607851028442,
      -1.801269292831421,
      -4.062189102172852,
      2.86807918548584,
      -1.6448156833648682,
      -1.3553335666656494,
      0.2958115339279175,
      2.3748395442962646,
      -0.8512691855430603,
      0.6118691563606262,
      -0.32750236988067627,
      -2.674926280975342,
      -1.6079754829406738,
      -3.7248501777648926,
      -3.531320810317993,
      -0.4727935791015625,
      -2.0107662677764893,
      -3.8347854614257812,
      1.1891193389892578,
      2.0983214378356934,
      0.9372490644454956,
      0.3781968355178833,
      0.7134398818016052,
      -2.486586809158325,
      -0.6116156578063965,
      1.090424656867981,
      3.2177066802978516,
      -1.1977124214172363,
      -4.183273792266846,
      -2.716620922088623,
      -1.4127134084701538,
      0.19669203460216522,
      2.195103645324707,
      2.076695442199707,
      2.6701207160949707,
      1.7871603965759277,
      -0.37310248613357544,
      -0.5160850286483765,
      2.0032899379730225,
      0.8354480862617493,
      -4.153391361236572,
      -1.8243210315704346,
      -0.5845154523849487,
      3.004831552505493,
      -0.6244458556175232,
      -1.4046766757965088,
      -1.042612910270691,
      0.20526093244552612,
      2.9714760780334473,
      -1.516886830329895,
      -1.2454156875610352,
      0.7210789918899536,
      -0.5669879913330078,
      -2.270216464996338,
      1.1637221574783325,
      -1.4725300073623657,
      0.1942521631717682,
      -2.2685179710388184,
      0.6323000192642212,
      -0.36590376496315,
      -3.455305814743042,
      -3.282660484313965,
      -0.3524971008300781,
      0.8700831532478333,
      0.325078547000885,
      -1.8413549661636353,
      -0.6803548336029053,
      -3.595804214477539,
      4.102609634399414,
      0.5126602649688721,
      -1.9966912269592285,
      0.8830074071884155,
      2.93080997467041,
      3.825888156890869,
      -3.448920249938965,
      -3.855410575866699,
      3.1459193229675293,
      0.37344539165496826,
      -1.1721707582473755,
      -0.9484155774116516,
      2.343438148498535,
      1.9704697132110596,
      2.989165782928467,
      3.647134780883789,
      0.3438640832901001,
      1.2770150899887085,
      0.718330979347229,
      -1.3736151456832886,
      1.790712594985962,
      3.6841347217559814,
      -0.10226587951183319,
      2.2388463020324707,
      -1.8345032930374146,
      1.0488331317901611,
      3.370969295501709,
      0.9345355033874512,
      -1.7418291568756104,
      -3.118978500366211,
      -0.24507588148117065,
      -1.1566801071166992,
      1.2968101501464844,
      3.7370426654815674,
      -1.7913695573806763,
      -2.6128714084625244,
      3.687163829803467,
      1.3072545528411865,
      0.33156222105026245,
      0.5089517831802368,
      -2.170104742050171,
      2.0179507732391357,
      2.012784957885742,
      -3.145475149154663,
      2.315345287322998,
      -1.431187629699707,
      -0.3003692328929901,
      4.483489990234375,
      5.509093761444092,
      -1.6524261236190796,
      3.50439190864563,
      1.012885570526123,
      -0.26061439514160156,
      1.1265807151794434,
      0.1837925910949707,
      -1.0403984785079956,
      4.389566421508789,
      -3.7545948028564453,
      -1.0523332357406616,
      0.4303891658782959,
      1.2424267530441284,
      2.363285541534424,
      0.317110151052475,
      0.9210626482963562,
      -0.5642592906951904,
      -2.463355302810669,
      -1.379316806793213,
      -1.5643887519836426,
      4.028460502624512,
      1.9488394260406494,
      5.583308696746826,
      0.16554498672485352,
      2.5719223022460938,
      2.6652560234069824,
      -4.596857070922852,
      2.7000374794006348,
      -1.6819947957992554,
      2.895763874053955,
      1.7338905334472656,
      2.403876304626465,
      0.8656936883926392,
      -0.5383517742156982,
      0.6414210200309753,
      0.3465674817562103,
      0.5715227723121643,
      -0.051513880491256714,
      0.5151005983352661,
      0.8326714634895325,
      2.7029151916503906,
      2.295689821243286,
      0.34804636240005493,
      -0.0662044882774353,
      -3.4271671772003174,
      -1.0247924327850342,
      1.1311473846435547,
      -0.9366584420204163,
      1.2926661968231201,
      -0.06825192272663116,
      -0.7607815861701965,
      -3.3076586723327637,
      -1.9587786197662354,
      -4.440684795379639,
      -0.9622816443443298,
      1.574890375137329,
      0.1351958066225052,
      -1.328601598739624,
      0.07027751207351685,
      0.25474151968955994,
      1.5026607513427734,
      -0.8382842540740967,
      0.40743255615234375,
      0.2565476894378662,
      2.0861496925354004,
      -0.48353296518325806,
      -4.603050231933594,
      -0.7534376978874207,
      1.0818736553192139,
      2.0765185356140137,
      -2.7201366424560547,
      1.0912787914276123,
      1.8293412923812866,
      0.6599133014678955,
      -1.6142470836639404,
      -2.0819642543792725,
      0.39623725414276123,
      -3.135334014892578,
      -0.1359788328409195,
      0.8336013555526733,
      -5.71711540222168,
      -0.30682364106178284,
      -2.9107372760772705,
      3.9219062328338623,
      -2.8226208686828613,
      -0.48081791400909424,
      -2.916982650756836,
      1.8558378219604492,
      -1.830925464630127,
      4.078372955322266,
      0.6547835469245911,
      -0.6113607287406921,
      3.151492118835449,
      -6.525669097900391,
      5.3933563232421875,
      -3.96484375,
      -1.4950106143951416,
      -3.6958703994750977,
      -1.338736653327942,
      1.8994770050048828,
      -1.623032569885254,
      5.316862106323242,
      1.929802417755127,
      -1.6234521865844727,
      3.4030838012695312,
      1.9580559730529785,
      -0.9837092161178589,
      0.9046684503555298,
      -2.5665013790130615,
      2.175833225250244,
      3.094273805618286,
      2.94637393951416,
      2.202857494354248,
      1.9518626928329468,
      -3.5257654190063477,
      1.141360878944397,
      2.9411728382110596,
      3.260737657546997,
      0.8607381582260132,
      1.815351963043213,
      -0.07108534872531891,
      2.0557572841644287,
      4.595670700073242,
      -1.6193835735321045,
      -3.862184524536133,
      1.7671749591827393,
      0.5033769607543945,
      1.2568975687026978,
      0.7870861291885376,
      -0.4178560972213745,
      1.0204756259918213,
      -0.2737947106361389,
      0.3136778175830841,
      -1.3359613418579102,
      3.5017709732055664,
      1.2079801559448242,
      -1.5169727802276611,
      -3.369739055633545,
      -2.246718645095825,
      -0.15557348728179932,
      6.918743133544922,
      -0.0008385637775063515,
      0.15497782826423645,
      0.775022029876709,
      1.8853403329849243,
      -0.5526162981987,
      2.6067748069763184,
      -2.683607578277588,
      -0.5156756043434143,
      6.595883369445801,
      0.5735406279563904,
      -1.6228368282318115,
      1.0141432285308838,
      0.37439829111099243,
      1.3937424421310425,
      -2.7879068851470947,
      -1.5111720561981201,
      -0.5736755132675171,
      -0.4727897047996521,
      -2.7592291831970215,
      1.985388994216919,
      -1.628092646598816,
      0.747977614402771,
      4.118717193603516,
      -3.2233481407165527,
      -2.6029224395751953,
      2.5210721492767334,
      -0.05475057661533356,
      3.3429832458496094,
      -0.1625606268644333,
      -4.4385480880737305,
      -0.7213448286056519,
      1.355907678604126,
      0.4825742840766907,
      -3.502735137939453,
      0.6917688250541687,
      0.26420098543167114,
      0.7437039613723755,
      -1.8197993040084839,
      1.0602103471755981,
      4.69907283782959,
      1.1116650104522705,
      -0.13402312994003296,
      0.5561375617980957,
      1.4539103507995605,
      -3.8700132369995117,
      1.1095114946365356,
      -0.17436754703521729,
      2.270756483078003,
      -2.3304100036621094,
      3.404407024383545,
      4.152745723724365,
      2.1446855068206787,
      -2.6071810722351074,
      -2.4556710720062256,
      2.4513773918151855,
      3.009181499481201,
      -1.1264193058013916,
      1.365983247756958,
      1.2357192039489746,
      -2.3402481079101562,
      0.021456509828567505,
      -2.224949836730957,
      -5.506998062133789,
      3.1466853618621826,
      3.0577454566955566,
      2.245023727416992,
      -0.2548050284385681,
      -0.027231484651565552,
      0.3538224399089813,
      -1.2210502624511719,
      0.676703691482544,
      2.379587173461914,
      2.942798137664795,
      -0.8056774735450745,
      4.6777024269104,
      1.1038634777069092,
      1.9161624908447266,
      -0.7409613132476807,
      1.0570647716522217,
      -0.5582290291786194,
      0.33919280767440796,
      -4.04475212097168,
      -7.93919563293457,
      -3.3726468086242676,
      -1.1881473064422607,
      1.517921805381775,
      1.223937749862671,
      2.1145243644714355,
      2.193756103515625,
      0.8140489459037781,
      1.6214418411254883,
      -2.300466537475586,
      4.049571514129639,
      -2.4867799282073975,
      2.406918525695801,
      3.39884877204895,
      -1.928836703300476,
      -2.016491413116455,
      -1.6403377056121826,
      -0.4692270755767822,
      4.206913471221924,
      -0.25458475947380066,
      4.039356231689453,
      -0.8701845407485962,
      1.7770652770996094,
      3.132741928100586,
      -2.0444302558898926,
      0.1902088224887848,
      2.5810904502868652,
      0.5343791246414185,
      -0.597815752029419,
      -0.33950942754745483,
      1.8073652982711792,
      5.200031757354736,
      0.38636577129364014,
      0.5009194612503052,
      2.481722116470337,
      2.644754409790039,
      1.0488109588623047,
      -2.1183862686157227,
      -2.7316572666168213,
      0.4164479374885559,
      -0.14763443171977997,
      0.011010400950908661,
      0.3016752004623413,
      0.2095988392829895,
      -0.31483733654022217,
      1.0352517366409302,
      1.2664475440979004,
      2.877455234527588,
      1.2072563171386719,
      -1.7732810974121094,
      -0.04669845104217529,
      -0.07195480167865753,
      -0.9959641098976135,
      1.6019500494003296,
      -2.203627586364746,
      1.4170732498168945,
      0.7455061078071594,
      -0.013104135170578957,
      0.6215356588363647,
      -1.5728716850280762,
      0.8712608218193054,
      -4.481454849243164,
      0.45225417613983154,
      0.9914025068283081,
      4.220520496368408,
      -4.332125663757324,
      1.6681561470031738,
      4.066044807434082,
      -1.2816956043243408,
      0.40401625633239746,
      3.4646224975585938,
      -0.7428807616233826,
      1.007899284362793,
      -3.4488749504089355,
      -7.437690258026123,
      0.9480054378509521,
      0.980561375617981,
      -5.117312431335449,
      -3.8516685962677,
      5.773345947265625,
      -0.3750399351119995,
      -0.23431158065795898,
      -2.1197872161865234,
      3.7191600799560547,
      -1.295850157737732,
      -0.9000211954116821,
      1.7298568487167358,
      -0.6342898607254028,
      -0.6895177364349365,
      -1.2470897436141968,
      0.3344374895095825,
      1.6553902626037598,
      -2.049607753753662,
      0.34674498438835144,
      0.45740601420402527,
      0.12983021140098572,
      -0.606439471244812,
      2.129617691040039,
      -2.00124192237854,
      -2.472799062728882,
      -4.0811238288879395,
      0.22879332304000854,
      0.4983218312263489,
      -2.1039915084838867,
      0.13855236768722534,
      -4.019905090332031,
      -0.049428969621658325,
      -0.6128489971160889,
      0.6410537362098694,
      0.172038272023201,
      1.4634065628051758,
      -1.7546806335449219,
      2.469888210296631,
      0.15073224902153015,
      0.4091005325317383,
      -6.95684289932251,
      -1.4930814504623413,
      -2.552633285522461,
      -1.912168025970459,
      2.044182777404785,
      -1.737627625465393,
      0.8122683763504028,
      -1.5198677778244019,
      -4.1205034255981445,
      3.0826668739318848,
      -2.494229316711426,
      -1.1563458442687988,
      4.724070072174072,
      -1.1683217287063599,
      3.80067777633667,
      -1.4201338291168213,
      0.554955244064331,
      4.082496643066406,
      -1.994687795639038,
      3.5093936920166016,
      -1.818359613418579,
      -3.8180418014526367,
      1.0104291439056396,
      -0.6126047372817993,
      -5.186394691467285,
      -3.8529865741729736,
      1.24098801612854,
      2.735503673553467,
      1.7296204566955566,
      0.016512706875801086,
      -1.3781846761703491,
      -1.3531609773635864,
      -3.176666259765625,
      -0.4323117733001709,
      0.1657525897026062,
      -1.4815831184387207,
      1.5085279941558838,
      -2.9175148010253906,
      -3.2505507469177246,
      1.7304521799087524,
      2.178906202316284,
      -2.1351988315582275,
      -0.6457841396331787,
      -0.9506844282150269,
      -0.3473559617996216,
      -1.1977951526641846,
      -1.2086968421936035,
      -2.9402053356170654,
      6.273015022277832,
      -2.054138660430908,
      0.23060393333435059,
      -1.897106409072876,
      -4.267983913421631,
      -1.6512831449508667,
      2.1799135208129883,
      0.13144560158252716,
      -0.33709779381752014,
      0.7795708775520325,
      -0.6575592756271362,
      -3.5736570358276367,
      1.9314991235733032,
      1.9019269943237305,
      -2.985316753387451,
      -1.5005006790161133,
      0.010197550058364868,
      -2.401062488555908,
      -0.8648676872253418,
      -2.7029359340667725,
      0.05146150290966034,
      -1.7793629169464111,
      -3.8220043182373047,
      1.7566123008728027,
      1.1559149026870728,
      3.547649383544922,
      1.6277928352355957,
      -3.200019359588623,
      -0.2851450741291046,
      -4.017879486083984,
      -0.21467962861061096,
      -0.1193949282169342,
      2.57849383354187,
      -2.0261597633361816,
      -0.7606240510940552,
      -0.15141567587852478,
      -0.8227984309196472,
      0.7204628586769104,
      -2.614686965942383,
      0.5427447557449341,
      -1.4452544450759888,
      -3.5072641372680664,
      3.1856307983398438,
      2.069502592086792,
      3.118847370147705,
      -1.751623511314392,
      -1.14943265914917,
      -3.2492518424987793,
      3.4234161376953125,
      -3.573911190032959,
      -3.9750280380249023,
      1.900260090827942,
      -0.8438698053359985,
      2.471524715423584,
      1.2387816905975342,
      -3.9086763858795166,
      -0.2738339304924011,
      1.8567664623260498,
      1.901822566986084,
      0.7866761684417725,
      -1.0009928941726685,
      0.6644538640975952,
      -0.17206865549087524,
      2.426022529602051,
      1.2166439294815063,
      1.7450506687164307,
      3.6217260360717773,
      -2.1918303966522217,
      3.501750946044922,
      1.693986177444458,
      0.7235802412033081,
      1.7616872787475586,
      3.6329431533813477,
      -3.5730438232421875,
      1.0819116830825806,
      3.4219861030578613,
      1.1487722396850586,
      -0.9618809223175049,
      -5.3853535652160645,
      2.3532605171203613,
      0.5236431360244751,
      -0.4920429289340973,
      0.7536395788192749,
      3.3546905517578125,
      -0.4338274598121643,
      3.0068626403808594,
      -3.3475356101989746,
      4.693214416503906,
      -2.1634817123413086,
      -2.465376377105713,
      0.06813840568065643,
      -0.09589794278144836,
      0.8234801888465881,
      -0.28772982954978943,
      -1.365837812423706,
      -0.9197624325752258,
      -2.3786721229553223,
      3.5490379333496094,
      -1.6116943359375,
      -2.319779396057129,
      -1.4374018907546997,
      1.8938400745391846,
      0.4397590756416321,
      -1.1401662826538086,
      -1.5406527519226074,
      -1.354872703552246,
      -0.9220088720321655,
      -1.6607606410980225,
      3.2262380123138428,
      -1.5111944675445557,
      -0.5191903710365295,
      2.2064764499664307,
      2.7654502391815186,
      0.12060648202896118,
      -2.527010440826416,
      -0.5274739265441895,
      -1.277311086654663,
      2.5123560428619385,
      4.034602165222168,
      -1.9909279346466064,
      -0.24563680589199066,
      -3.705618381500244,
      -2.0205185413360596,
      -5.554520130157471,
      -5.332137107849121,
      -1.1888117790222168,
      0.8202224969863892,
      0.6219097375869751,
      -1.5241944789886475,
      1.7036503553390503,
      -0.8311114311218262,
      -4.160922527313232,
      2.8369269371032715,
      1.5429153442382812,
      -0.038456737995147705,
      0.5943104028701782,
      1.51449453830719,
      -4.042849540710449,
      -0.7020843029022217,
      -0.9611448049545288,
      -3.2752184867858887,
      -1.0332973003387451,
      -3.905855894088745,
      0.5299563407897949,
      1.4335333108901978,
      -2.808579206466675,
      4.454623222351074,
      -2.2383317947387695,
      -4.784788608551025,
      3.2087392807006836,
      2.136904716491699,
      1.271710753440857,
      -0.1337616741657257,
      1.102691888809204,
      1.7546650171279907,
      4.71331262588501,
      -1.572437047958374,
      -2.033377170562744,
      -1.4252827167510986,
      -3.1919407844543457,
      -1.5887340307235718,
      1.7822792530059814,
      -1.9253793954849243,
      2.7741031646728516,
      -3.2167763710021973,
      0.3269890546798706,
      1.5211496353149414,
      -1.347043514251709,
      0.21050356328487396,
      2.4310288429260254,
      -2.0682599544525146,
      -4.382493019104004,
      1.9002063274383545,
      5.143777847290039,
      2.3011832237243652,
      1.8485462665557861,
      2.8118510246276855,
      -1.8743784427642822,
      3.9697022438049316,
      -1.136845350265503,
      -4.150590896606445,
      -0.5999035239219666,
      0.5155675411224365,
      0.8222032785415649,
      0.25968503952026367,
      -1.8435108661651611,
      0.7849248647689819,
      -3.188387393951416,
      2.1053268909454346,
      -1.1260337829589844,
      4.522841453552246,
      -2.343440532684326,
      0.8670401573181152,
      -2.0041866302490234,
      -1.638573408126831,
      -1.7032694816589355,
      -3.0969743728637695,
      1.0408127307891846,
      -2.9837775230407715,
      5.617643356323242,
      -0.18794584274291992,
      1.3511501550674438,
      -2.2800917625427246,
      3.228630304336548,
      0.9778323769569397,
      -0.90382981300354,
      0.36803364753723145,
      -2.369814872741699,
      0.9298133850097656,
      2.026308298110962,
      2.420731544494629,
      0.24597492814064026,
      1.6705529689788818,
      -3.785092830657959,
      -3.1824750900268555,
      0.6980984210968018,
      -2.106013298034668,
      2.0260415077209473,
      3.250924587249756,
      -2.094576597213745,
      1.1227658987045288,
      -5.221075057983398,
      -3.7092628479003906,
      -2.9940195083618164,
      3.7613277435302734,
      6.018345832824707,
      5.191885948181152,
      3.7874085903167725,
      0.0118059441447258,
      -0.9975622892379761,
      0.7683624029159546,
      -3.64323091506958,
      0.3963169455528259,
      -1.1499418020248413,
      1.5267220735549927,
      1.1838116645812988,
      0.5991339683532715,
      -1.7501177787780762,
      1.4511451721191406,
      -2.040935754776001,
      -0.7882697582244873,
      2.6435208320617676,
      1.2024517059326172,
      3.3477745056152344,
      -2.1703007221221924,
      -1.4285922050476074,
      -3.256948471069336,
      -1.9398467540740967,
      0.4640342593193054,
      -0.9997119903564453,
      2.352919816970825,
      -2.1070973873138428,
      -1.984083652496338,
      -0.3430825173854828,
      -0.9021745324134827,
      5.263639450073242,
      0.8221256732940674,
      0.8923991918563843,
      -0.8229922652244568,
      -3.9184446334838867,
      -3.6009767055511475,
      2.927737236022949,
      0.871411919593811,
      -0.2550358474254608,
      2.6199493408203125,
      -3.8300015926361084,
      1.648944616317749,
      -3.7143402099609375,
      1.3659207820892334,
      2.1033568382263184,
      0.22941838204860687,
      1.7477960586547852,
      0.7422817349433899,
      -2.922940254211426,
      -4.389864921569824,
      -0.978498637676239,
      0.7044598460197449,
      1.4681869745254517,
      3.4652292728424072,
      -3.471350908279419,
      0.6848130226135254,
      3.2630362510681152,
      -2.0560362339019775,
      -2.367154359817505,
      -2.0156044960021973,
      1.08977472782135,
      3.425381660461426,
      3.818444013595581,
      3.8649940490722656,
      -0.7231144309043884,
      -2.195209503173828,
      0.1354115605354309,
      2.0436134338378906,
      0.28797125816345215,
      1.313744068145752,
      -1.5408962965011597,
      0.4328632950782776,
      -2.366100788116455,
      1.6113888025283813,
      1.719717264175415,
      -1.7778809070587158,
      -1.0864577293395996,
      3.5654640197753906,
      2.1870057582855225,
    ]),
    'input_text': 'Romeo Santos made an appointment with Dr. Geoffrey Royce on December 21, 2020. Mr. Santos was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__submit_and_poll[embeddings][poller_docstring]
  '''
  Fetches the results of a previous embeddings request to the ScienceIO API.
  
  Args:
      request_id (str): The id for the request, as returned by `submit_embeddings_request`.
  
  Returns:
      Optional[dict]: The output of the embeddings API call with the given input text, if the request is completed. Otherwise, `None`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[embeddings][submit_docstring]
  '''
  Submits a embeddings request to the ScienceIO API, and returns a request id to fetch results at a later time.
  
  Args:
      text (str): The input text to process using the embeddings model.
  
  Returns:
      str: The id for this request, usable with `get_embeddings_response`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[identify_phi][payload]
  dict({
    'annotations': list([
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.998,
          }),
        }),
        'span': dict({
          'end': 12,
          'start': 0,
        }),
        'text': 'Romeo Santos',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[DOCTOR]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 56,
          'start': 42,
        }),
        'text': 'Geoffrey Royce',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[DATE]',
          }),
          'phi_type': dict({
            'label': '[DATE]',
            'score': 1.0,
          }),
        }),
        'span': dict({
          'end': 77,
          'start': 60,
        }),
        'text': 'December 21, 2020',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 89,
          'start': 83,
        }),
        'text': 'Santos',
      }),
    ]),
    'input_text': 'Romeo Santos made an appointment with Dr. Geoffrey Royce on December 21, 2020. Mr. Santos was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__submit_and_poll[identify_phi][poller_docstring]
  '''
  Fetches the results of a previous identify-phi request to the ScienceIO API.
  
  Args:
      request_id (str): The id for the request, as returned by `submit_identify_phi_request`.
  
  Returns:
      Optional[dict]: The output of the identify-phi API call with the given input text, if the request is completed. Otherwise, `None`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[identify_phi][submit_docstring]
  '''
  Submits a identify-phi request to the ScienceIO API, and returns a request id to fetch results at a later time.
  
  Args:
      text (str): The input text to process using the identify-phi model.
  
  Returns:
      str: The id for this request, usable with `get_identify_phi_response`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[redact_phi][payload]
  dict({
    'annotations': list([
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.998,
          }),
        }),
        'span': dict({
          'end': 9,
          'start': 0,
        }),
        'text': '[PATIENT]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[DOCTOR]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 47,
          'start': 39,
        }),
        'text': '[DOCTOR]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[DATE]',
          }),
          'phi_type': dict({
            'label': '[DATE]',
            'score': 1.0,
          }),
        }),
        'span': dict({
          'end': 57,
          'start': 51,
        }),
        'text': '[DATE]',
      }),
      dict({
        'labels': dict({
          'category': dict({
            'label': '[PERSON]',
          }),
          'phi_type': dict({
            'label': '[PATIENT]',
            'score': 0.999,
          }),
        }),
        'span': dict({
          'end': 72,
          'start': 63,
        }),
        'text': '[PATIENT]',
      }),
    ]),
    'output_text': '[PATIENT] made an appointment with Dr. [DOCTOR] on [DATE]. Mr. [PATIENT] was complaining of symptoms of alcohol overdose, and showed signs of possible Capgras delusion.',
  })
# ---
# name: test_autogenerated__submit_and_poll[redact_phi][poller_docstring]
  '''
  Fetches the results of a previous redact-phi request to the ScienceIO API.
  
  Args:
      request_id (str): The id for the request, as returned by `submit_redact_phi_request`.
  
  Returns:
      Optional[dict]: The output of the redact-phi API call with the given input text, if the request is completed. Otherwise, `None`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[redact_phi][submit_docstring]
  '''
  Submits a redact-phi request to the ScienceIO API, and returns a request id to fetch results at a later time.
  
  Args:
      text (str): The input text to process using the redact-phi model.
  
  Returns:
      str: The id for this request, usable with `get_redact_phi_response`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[structure][payload]
  dict({
    'spans': list([
      dict({
        'concept_id': 'UMLS:C5203670',
        'concept_name': 'COVID-19',
        'concept_type': 'Medical Conditions',
        'pos_end': 12,
        'pos_start': 4,
        'text': 'COVID-19',
      }),
      dict({
        'concept_id': 'UMLS:C1615608',
        'concept_name': 'Pandemics',
        'concept_type': 'Anatomy & Physiology',
        'pos_end': 21,
        'pos_start': 13,
        'text': 'pandemic',
      }),
      dict({
        'concept_id': 'UMLS:C0008059',
        'concept_name': 'Child',
        'concept_type': 'Context',
        'pos_end': 81,
        'pos_start': 73,
        'text': 'children',
      }),
      dict({
        'concept_id': 'UMLS:C0001779',
        'concept_name': 'Age',
        'concept_type': 'Anatomy & Physiology',
        'pos_end': 90,
        'pos_start': 87,
        'text': 'Age',
      }),
      dict({
        'concept_id': 'UMLS:C0008059',
        'concept_name': 'Child',
        'concept_type': 'Context',
        'pos_end': 151,
        'pos_start': 143,
        'text': 'children',
      }),
      dict({
        'concept_id': 'UMLS:C0009450',
        'concept_name': 'Communicable Diseases',
        'concept_type': 'Medical Conditions',
        'pos_end': 192,
        'pos_start': 183,
        'text': 'infection',
      }),
    ]),
    'text': 'The COVID-19 pandemic has shown a markedly low proportion of cases among children 1-4. Age disparities in observed cases could be explained by children having lower susceptibility to infection, lower propensity to show clinical symptoms or both.',
  })
# ---
# name: test_autogenerated__submit_and_poll[structure][poller_docstring]
  '''
  Fetches the results of a previous structure request to the ScienceIO API.
  
  Args:
      request_id (str): The id for the request, as returned by `submit_structure_request`.
  
  Returns:
      Optional[dict]: The output of the structure API call with the given input text, if the request is completed. Otherwise, `None`.
  '''
# ---
# name: test_autogenerated__submit_and_poll[structure][submit_docstring]
  '''
  Submits a structure request to the ScienceIO API, and returns a request id to fetch results at a later time.
  
  Args:
      text (str): The input text to process using the structure model.
  
  Returns:
      str: The id for this request, usable with `get_structure_response`.
  '''
# ---
# name: test_error_cases[blocked_api_user_submit]
  dict({
    'serialized_exception': '"Your free trial has ended. Please upgrade your plan by visiting science.io/pricing to proceed"',
    'status_code': 403,
  })
# ---
# name: test_error_cases[expired_request_id_poll]
  dict({
    'serialized_exception': '"An error occured, please email api_support@science.io for assistance."',
    'status_code': 410,
  })
# ---
# name: test_error_cases[invalid_api_key_too_short_submit]
  dict({
    'serialized_exception': '{"message": "Invalid request", "errors": {"api_id": ["ensure this value has at least 20 characters"]}}',
    'status_code': 400,
  })
# ---
# name: test_error_cases[invalid_api_secret_submit]
  dict({
    'serialized_exception': '{"message": "Invalid request", "errors": {"api_secret": ["value is not a valid uuid"]}}',
    'status_code': 400,
  })
# ---
# name: test_error_cases[lambda_cold_start_timeout_submit]
  dict({
    'serialized_exception': '"An error occured, please email api_support@science.io for assistance."',
    'status_code': 503,
  })
# ---
# name: test_error_cases[unknown_api_key_submit]
  dict({
    'serialized_exception': '"API key not found"',
    'status_code': 404,
  })
# ---
# name: test_error_cases[unknown_request_id_poll]
  dict({
    'serialized_exception': '"Request id xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx not found"',
    'status_code': 404,
  })
# ---
